objects/CSS_SMN_FaultCode__c.object
<CustomObject>
    <description>This object is for filtering SMN based on Fault codes</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FC_Desc__c</fullName>
        <formula>SUBSTITUTE(Fault_Code__c +&quot;-&quot;+Description__c, &quot;&apos;&quot;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FC_Desc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code__c</fullName>
        <description>Fault codes</description>
        <label>Fault Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMN__c</fullName>
        <description>Service Model Number of Engine</description>
        <label>SMN</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>CSS SMN FaultCode</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Fault_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>CSS_SMN_FaultCode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS SMN FaultCode</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>